Add explain component

--- a/website/src/styles/globals.scss
+++ b/website/src/styles/globals.scss
@@ -85,3 +85,84 @@ svg {
     }
 	}
 }
+
+.tooltip-content {
+	font-family: inherit;
+  border-radius: 4px;
+  padding: 10px 15px;
+  line-height: 1;
+  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+  user-select: none;
+  animation-duration: 400ms;
+  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+  will-change: transform, opacity;
+	max-width: 300px;
+	font-size: 14px;
+	line-height: 1.25;
+
+	a {
+		text-decoration: underline;
+		color: #2C3300;
+		&:hover {
+
+		color: #849801;
+		}
+	}
+
+	&[data-state='delayed-open'][data-side='top'] {
+		animation-name: slideDownAndFade;
+	}
+	&[data-state='delayed-open'][data-side='right'] {
+		animation-name: slideLeftAndFade;
+	}
+	&[data-state='delayed-open'][data-side='bottom'] {
+		animation-name: slideUpAndFade;
+	}
+	&[data-state='delayed-open'][data-side='left'] {
+		animation-name: slideRightAndFade;
+	}
+}
+
+@keyframes slideUpAndFade {
+  from {
+    opacity: 0;
+    transform: translateY(2px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideRightAndFade {
+  from {
+    opacity: 0;
+    transform: translateX(-2px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideDownAndFade {
+  from {
+    opacity: 0;
+    transform: translateY(-2px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideLeftAndFade {
+  from {
+    opacity: 0;
+    transform: translateX(2px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
