--- a/website/src/styles/globals.scss
+++ b/website/src/styles/globals.scss
@@ -93,7 +93,7 @@ svg {
   line-height: 1;
   box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
   user-select: none;
-  animation-duration: 400ms;
+  animation-duration: 200ms;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   will-change: transform, opacity;
 	max-width: 300px;
@@ -126,43 +126,43 @@ svg {
 @keyframes slideUpAndFade {
   from {
     opacity: 0;
-    transform: translateY(2px);
+    transform: translateY(2px) scaleY(0);
   }
   to {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(0) scaleY(1);
   }
 }
 
 @keyframes slideRightAndFade {
   from {
     opacity: 0;
-    transform: translateX(-2px);
+    transform: translateX(-2px) scaleY(0);
   }
   to {
     opacity: 1;
-    transform: translateX(0);
+    transform: translateX(0) scaleY(1);
   }
 }
 
 @keyframes slideDownAndFade {
   from {
     opacity: 0;
-    transform: translateY(-2px);
+    transform: translateY(-2px) scaleY(0);
   }
   to {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(0) scaleY(1);
   }
 }
 
 @keyframes slideLeftAndFade {
   from {
     opacity: 0;
-    transform: translateX(2px);
+    transform: translateX(2px) scaleY(0);
   }
   to {
     opacity: 1;
-    transform: translateX(0);
+    transform: translateX(0) scaleY(1);
   }
 }
