--- a/website/src/styles/globals.scss
+++ b/website/src/styles/globals.scss
@@ -88,21 +88,23 @@ svg {
 
 .tooltip-content {
 	font-family: inherit;
-  border-radius: 4px;
-  padding: 10px 15px;
   line-height: 1;
   box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
   user-select: none;
   animation-duration: 200ms;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   will-change: transform, opacity;
-	max-width: 300px;
+	max-width: 280px;
 	font-size: 14px;
-	line-height: 1.25;
+	line-height: 21px;
+  border-radius: 8px;
+  box-shadow: 0px 12px 20px 0px rgba(0, 0, 0, 0.08), 0px 8px 12px 0px rgba(0, 0, 0, 0.16), 0px 4px 8px 0px rgba(0, 0, 0, 0.20), 0px 0px 0px 1px #191918, 0px -1px 0px 0px #222221;
+  border-radius: 8px;
+  background-color: rgb(20, 20, 19);
 
 	a {
 		text-decoration: underline;
-		color: #2C3300;
+		color: #B0CB01;
 		&:hover {
 
 		color: #849801;
